kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway
  annotations:
    #nginx.ingress.kubernetes.io/rewrite-target: /
    #traefik.ingress.kubernetes.io/router.middlewares: kube-system-services-strip@kubernetescrd
    #kubernetes.io/ingress.class: "nsx"
    #ncp/use-regex: "True"
    #ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths: 
        - path: /
          pathType: Prefix
          backend:
            service:
              name: api-gateway
              port: 
                number: 8080
        - path: /api/customer/(.*)
          pathType: Prefix
          backend:
            service:
              name: customers-service
              port: 
                number: 8081
        - path: /api/visit/
          pathType: Prefix
          backend:
            service:
              name: visits-service
              port: 
                number: 8082
        - path: /api/vet/
          pathType: Prefix
          backend:
            service:
              name: vets-service
              port: 
                number: 8083
        - path: /api/gateway/
          pathType: Prefix
          backend:
            service:
              name: customers-service
              port: 
                number: 8081
        - path: /api/gateway/visits/
          pathType: Prefix
          backend:
            service:
              name: visits-service
              port: 
                number: 8082
        - path: /api/gateway/vets/
          pathType: Prefix
          backend:
            service:
              name: vets-service
              port: 
                number: 8083
